tests/transpiler/x/swift/right_join.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:21 GMT+7
let customers = [["id": 1, "name": "Alice"], ["id": 2, "name": "Bob"], ["id": 3, "name": "Charlie"], ["id": 4, "name": "Diana"]]
let orders = [["id": 100, "customerId": 1, "total": 250], ["id": 101, "customerId": 2, "total": 125], ["id": 102, "customerId": 1, "total": 300]]
let result = ({ var _res: [[String: Any]] = []
for c in customers {
    for o in orders {
        if (o["customerId"]! == c["id"]!) {
            _res.append(["customerName": c["name"]!, "order": o])
        }
    }
}
return _res })()
print("--- Right Join using syntax ---")
for entry in result {
    if entry["order"]! {
        print("Customer", entry["customerName"]!, "has order", entry["order"]!["id"]!, "- $", entry["order"]!["total"]!)
    } else {
        print("Customer", entry["customerName"]!, "has no orders")
    }
}
